--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,3 +18,4 @@ $font-secondary-color: #777777;
 $desktop-width: 850px;
 $pronouns-font-size: 0.6em;
 $sidebar-width: 300px;
+$sidebar-padding-sides: 15px;
